# recsys

./: clients.yaml  custom_types.py  main.py  pyproject.toml  recsys.py  settings.py
cores/: chat_functions.py  llm_functions.py  publication_functions.py  recsys_functions.py
data/: bbg_chat.csv  publications.json
prompts/: chat.py  publication.py  recsys.py
utils/: utils.py
