[project]
name = "recommendation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.27",
    "langchain-openai>=0.2.0",
    "openai>=1.50.0",
    "loguru>=0.7.3",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "jinja2>=3.1.6",
    "langchain-community>=0.3.29",
]
